--- a/docker/docker.env.example
+++ b/docker/docker.env.example
@@ -1,5 +1,5 @@
 # 🚀 AgentChat Docker 环境变量配置模板
-# 复制此文件为 docker.env 并填入你的实际配置
+# 复制此文件为 .env 并填入你的实际配置
 
 # =================================
 # 🤖 AI模型配置
